k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lugx-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: lugx.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80

    - host: api.lugx.local
      http:
        paths:
          - path: /games(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: game-service
                port:
                  number: 8000

          - path: /orders(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: order-service
                port:
                  number: 8000

          - path: /analytics(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: analytics-service
                port:
                  number: 8000
